--- a/templates/MusicAnalyzer/Base.html
+++ b/templates/MusicAnalyzer/Base.html
@@ -14,6 +14,13 @@
         {% block head_block %}{% endblock %}
     </head>
     <body>
+        <header>
+            <nav class="uk-navbar-container uk-navbar blue">
+                <div class="uk-navbar-left">
+                    <h3>{% block heading %}MusicAnalyzer{% endblock %}</h3>
+                </div>
+            </nav>
+        </header>
         {% block body_block %}{% endblock %}
     </body>
 </html>
