Upload with simple form
- more than one item possible
- selection of more than one with strg (usability!)

--- a/templates/MusicAnalyzer/Choice.html
+++ b/templates/MusicAnalyzer/Choice.html
@@ -6,5 +6,12 @@
 {% endblock %}
 {% block heading %} {{ heading }}{% endblock %}
 {% block body_block %}
-test
+    {{ message }}
+    <form action="/MusicAnalyzer/choice/" method="post" enctype="multipart/form-data">
+        {% csrf_token %}
+        {% if file_form %}
+            {{ file_form.as_p }}
+        {% endif %}
+        <input class="button" type="submit" value="Upload"/>
+    </form>
 {% endblock %}
