--- a/templates/MusicAnalyzer/Base.html
+++ b/templates/MusicAnalyzer/Base.html
@@ -10,6 +10,10 @@
         <!-- UIkit JS -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.19/js/uikit.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.19/js/uikit-icons.min.js"></script>
+        <!-- JQuery -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>">
+
+        <!-- own CSS -->
         <link rel="stylesheet" type="text/css" href="{% static "/css/base.css" %}"/>
         {% block head_block %}{% endblock %}
     </head>
