make gui more use case specific

--- a/templates/MusicAnalyzer/Choice.html
+++ b/templates/MusicAnalyzer/Choice.html
@@ -15,7 +15,7 @@
 {% block body_block %}
     {{ message }}
     <div class="upload_files_box">
-        <h3>Drop Photos Here to Upload</h3>
+        <h3>Drop Files Here to Upload</h3>
     </div>
     <button type="button" class="upload_files">
        Upload files
