--- a/templates/MusicAnalyzer/Base.html
+++ b/templates/MusicAnalyzer/Base.html
@@ -1,34 +1,35 @@
 {% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title> {% block title %} MusicAnalyzer {% endblock %}</title>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!-- UIkit CSS -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.19/css/uikit.min.css" />
-        <!-- UIkit JS -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.19/js/uikit.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.19/js/uikit-icons.min.js"></script>
-        <!-- JQuery -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-        <!-- own CSS -->
-        <link rel="stylesheet" type="text/css" href="{% static "/css/base.css" %}"/>
-        {% block head_block %}{% endblock %}
-    </head>
-    <body>
-        <header>
-            <nav class="uk-navbar-container uk-navbar bgcolor">
-                <div class="uk-navbar-left">
-                    <h3>MusicAnalyzer</h3>
-                </div>
-                <div class="uk-navbar-center">
-                    <h3>{% block heading %}{% endblock %}</h3>
-                </div>
-            </nav>
-        </header>
-        <div class="body">
-        {% block body_block %}{% endblock %}
-        </div>
-    </body>
+<head>
+    <title> {% block title %} MusicAnalyzer {% endblock %}</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- UIkit CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.19/css/uikit.min.css"/>
+    <!-- UIkit JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.19/js/uikit.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.19/js/uikit-icons.min.js"></script>
+    <!-- JQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <!-- own CSS -->
+    <link rel="stylesheet" type="text/css" href="{% static "/css/base.css" %}"/>
+    {% block head_block %}{% endblock %}
+</head>
+<body>
+<header>
+    <div class="uk-position-top">
+        <nav class="uk-navbar-container uk-navbar-default" uk-navbar>
+            <div class="uk-navbar-left">
+                <ul class="uk-navbar-nav">
+                    <li class="uk-active"><a href="{% url 'MusicAnalyzer:index' %}">MusicAnalyzer</a></li>
+                </ul>
+            </div>
+        </nav>
+    </div>
+</header>
+<div class="body">
+    {% block body_block %}{% endblock %}
+</div>
+</body>
 </html>
