--- a/templates/MusicAnalyzer/Choice.html
+++ b/templates/MusicAnalyzer/Choice.html
@@ -3,49 +3,57 @@
 {% block title %}{{ title }}{% endblock %}
 {% block head_block %}
     {# JQUERY FILE UPLOAD SCRIPTS #}
-      <script src="{% static 'js/jquery-file-upload/vendor/jquery.ui.widget.js' %}"></script>
-      <script src="{% static 'js/jquery-file-upload/jquery.iframe-transport.js' %}"></script>
-      <script src="{% static 'js/jquery-file-upload/jquery.fileupload.js' %}"></script>
+    <script src="{% static 'js/jquery-file-upload/vendor/jquery.ui.widget.js' %}"></script>
+    <script src="{% static 'js/jquery-file-upload/jquery.iframe-transport.js' %}"></script>
+    <script src="{% static 'js/jquery-file-upload/jquery.fileupload.js' %}"></script>
 
-     {# add static files here #}
+    {# add static files here #}
     <link rel="stylesheet" type="text/css" href="{% static "/css/choice.css" %}"/>
     <script src="{% static 'js/upload_multiple_files.js' %}"></script>
     <script src="{% static 'js/search_corpus.js' %}"></script>
 
 {% endblock %}
+
 {% block heading %} {{ heading }}{% endblock %}
 {% block body_block %}
+    <h2 class="uk-text-center">Individual Analysis</h2>
     {{ message }}
+
     {% block upload_files %}
-        <div class="upload_files_box">
-            <h3>Drop Files Here to Upload</h3>
+        <div class="js-upload uk-placeholder uk-text-center upload_files_new">
+            <span uk-icon="icon: cloud-upload"></span>
+            <span class="uk-text-middle">Drop your file here to upload or</span>
+            <div uk-form-custom>
+                  <input id="fileupload" type="file" name="files" multiple
+               style="display: none;"
+               data-url="{% url 'MusicAnalyzer:choice' %}"
+               data-form-data='{"csrfmiddlewaretoken": "{{ csrf_token }}"}'>
+                <span class="uk-link upload_files">select from computer</span>
+            </div>
         </div>
-        <button type="button" class="upload_files">
-           Upload files
-        </button>
-        <input id="fileupload" type="file" name="files" multiple
-           style="display: none;"
-           data-url="{% url 'MusicAnalyzer:choice' %}"
-           data-form-data='{"csrfmiddlewaretoken": "{{ csrf_token }}"}'>
+        <progress id="js-progressbar" class="uk-progress" value="0" max="100" hidden></progress>
+
     {% endblock %}
+
     <table id="gallery">
-      <thead>
+        <thead>
         <tr>
-          <th>uploaded files</th>
+            <th>uploaded files</th>
         </tr>
-      </thead>
-      <tbody>
+        </thead>
+        <tbody>
         {% for file in files %}
-          <tr>
-            <td></td>
-          </tr>
+            <tr>
+                <td></td>
+            </tr>
         {% endfor %}
-      </tbody>
+        </tbody>
     </table>
 
     {% block search_corpus %}
         {% if search_form %}
-            <form id="search_form" method="post" action="/MusicAnalyzer/choice/" data-search-corpus-url="/MusicAnalyzer/choice/">
+            <form id="search_form" method="post" action="/MusicAnalyzer/choice/"
+                  data-search-corpus-url="/MusicAnalyzer/choice/">
                 {% csrf_token %}
                 <input type="hidden" name="state" value="search_corpus"/>
                 {{ search_form.as_p }}
@@ -56,10 +64,10 @@
         <h3>search results</h3>
         <table id="searchResults">
             <thead>
-                <tr>
-                    <th>composer</th>
-                    <th>title</th>
-                </tr>
+            <tr>
+                <th>composer</th>
+                <th>title</th>
+            </tr>
             </thead>
             <tbody>
 
