--- a/templates/MusicAnalyzer/Base.html
+++ b/templates/MusicAnalyzer/Base.html
@@ -22,7 +22,7 @@
         <nav class="uk-navbar-container uk-navbar-default" uk-navbar>
             <div class="uk-navbar-left">
                 <ul class="uk-navbar-nav">
-                    <li class="uk-active"><a href="{% url 'MusicAnalyzer:index' %}">MusicAnalyzer</a></li>
+                    <li class="uk-active"><a href="{% url 'MusicAnalyzer:choice' %}">MusicAnalyzer</a></li>
                 </ul>
             </div>
         </nav>
