--- a/MusicAnalyzer/static/css/base.css
+++ b/MusicAnalyzer/static/css/base.css
@@ -6,6 +6,11 @@ header nav {
     padding: 1em;
 }
 
+.uk-navbar-container:not(.uk-navbar-transparent) {
+    background: #e6e6e6;
+    height: 50px;
+}
+
 .body {
     padding: 1em;
 }
