--- a/templates/MusicAnalyzer/Base.html
+++ b/templates/MusicAnalyzer/Base.html
@@ -25,6 +25,17 @@
                 <div class="uk-navbar-center">
                     <h3>{% block heading %}{% endblock %}</h3>
                 </div>
+                <div class="uk-navbar-right">
+                     <ul class="uk-navbar-nav">
+                        <li class="">
+                            <a href="">qualitative analysis</a>
+                        </li>
+                        <li class="">
+                            <a href="">distant hearing</a>
+                        </li>
+
+                    </ul>
+                </div>
             </nav>
         </header>
         <div class="body">
