--- a/MusicAnalyzer/static/css/choice.css
+++ b/MusicAnalyzer/static/css/choice.css
@@ -9,5 +9,15 @@
     margin-top: 2em;
 }
 
+.uk-grid {
+    margin-left: 0px;
+}
+
 h2 {
-    margin-top: 3em;}
+    margin-top: 3em;
+    margin-bottom: 2.5em;
+}
+
+h3 {
+    font-size: 1.2em;
+}
