--- a/MusicAnalyzer/static/css/base.css
+++ b/MusicAnalyzer/static/css/base.css
@@ -1,5 +1,5 @@
 .bgcolor {
-    background-color:rgb(118, 235, 190) !important;
+    background-color: rgb(118, 235, 190) !important;
 }
 
 header nav {
@@ -7,7 +7,7 @@ header nav {
 }
 
 .uk-navbar-container:not(.uk-navbar-transparent) {
-    background: #e6e6e6;
+    background: #BBDEFB;
     height: 50px;
 }
 
@@ -15,6 +15,6 @@ header nav {
     padding: 1em;
 }
 
-.invisible{
+.invisible {
     display: none;
 }
