--- a/MusicAnalyzer/static/css/choice.css
+++ b/MusicAnalyzer/static/css/choice.css
@@ -11,12 +11,25 @@
 
 .uk-grid {
     margin-left: 0px;
+    padding-left: 0px !important;
 }
 
 h2 {
     margin-top: 3em;
     margin-bottom: 2.5em;
 }
+
+.uk-button-default {
+    background-color: transparent;
+    color: #333;
+    border: 1px solid #1e87f0;
+}
+
+.uk-button-default:focus, .uk-button-default:hover, .uk-button-default:active {
+    background-color: #BBDEFB !important;
+    border: 1px solid #1e87f0;
+}
+
 
 h3 {
     font-size: 1.2em;
