--- a/templates/MusicAnalyzer/Choice.html
+++ b/templates/MusicAnalyzer/Choice.html
@@ -6,7 +6,9 @@
     <script src="{% static 'js/jquery-file-upload/vendor/jquery.ui.widget.js' %}"></script>
     <script src="{% static 'js/jquery-file-upload/jquery.iframe-transport.js' %}"></script>
     <script src="{% static 'js/jquery-file-upload/jquery.fileupload.js' %}"></script>
-
+    {# fontawesome for icons #}
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css"
+          integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     {# add static files here #}
     <link rel="stylesheet" type="text/css" href="{% static "/css/choice.css" %}"/>
     <script src="{% static 'js/handle_file_choice.js' %}"></script>
@@ -16,95 +18,103 @@
 {% block body_block %}
     <h2 class="uk-text-center">{{ heading }}</h2>
     {{ message }}
-    <div class="uk-grid uk-child-width-1-2">
+    <div class="uk-child-width-expand@s" uk-grid>
         <div class="uk-container">
             <h3 class="uk-text-center">Select your own file</h3>
 
-                <div class="js-upload uk-placeholder uk-text-center upload_files_new">
-                    <span uk-icon="icon: cloud-upload"></span>
-                    <span class="uk-text-middle">Drop your file here to upload or</span>
-                    <div uk-form-custom>
-                        <input id="fileupload" type="file" name="files"
-                               style="display: none;"
-                                {% if type == "distant" %}
-                               multiple
-                               data-url="{% url 'MusicAnalyzer:distant_choice' %}"
-                                {% elif type == "individual" %}
-                               data-url="{% url 'MusicAnalyzer:individual_choice' %}"
-                                {% endif %}
-                               data-form-data='{"csrfmiddlewaretoken": "{{ csrf_token }}"}'>
-                        <span class="uk-link upload_files">select from computer</span>
-                    </div>
+            <div class="js-upload uk-placeholder uk-text-center upload_files_new">
+                <span uk-icon="icon: cloud-upload"></span>
+                <span class="uk-text-middle">Drop your file here to upload or</span>
+                <div uk-form-custom>
+                    <input id="fileupload" type="file" name="files"
+                           style="display: none;"
+                            {% if type == "distant" %}
+                           multiple
+                           data-url="{% url 'MusicAnalyzer:distant_choice' %}"
+                            {% elif type == "individual" %}
+                           data-url="{% url 'MusicAnalyzer:individual_choice' %}"
+                            {% endif %}
+                           data-form-data='{"csrfmiddlewaretoken": "{{ csrf_token }}"}'>
+                    <span class="uk-link upload_files">select from computer</span>
                 </div>
-                <progress id="js-progressbar" class="uk-progress" value="0" max="100" hidden></progress>
+            </div>
+            <progress id="js-progressbar" class="uk-progress" value="0" max="100" hidden></progress>
 
 
         </div>
         <div class="uk-container">
             <h3 class="uk-text-center">Search file from corpus</h3>
-                {% if search_form %}
-                    <form id="search_form" method="post"
-                            {% if type == "distant" %}
-                          action="{% url 'MusicAnalyzer:distant_choice' %}"
-                          data-search-corpus-url="{% url 'MusicAnalyzer:distant_choice' %}"
-                            {% elif type == "individual" %}
-                          action="{% url 'MusicAnalyzer:individual_choice' %}"
-                          data-search-corpus-url="{% url 'MusicAnalyzer:individual_choice' %}"
-                            {% endif %}
-                    >
-                        {% csrf_token %}
-                        <input type="hidden" name="state" value="search_corpus"/>
-                        {{ search_form.as_p }}
-                    </form>
-                    <button id="search_corpus_button" class="uk-button uk-button-default"
-                            onclick="search_corpus(event)">Search
-                    </button>
+            {% if search_form %}
+                <form id="search_form" method="post"
+                        {% if type == "distant" %}
+                      action="{% url 'MusicAnalyzer:distant_choice' %}"
+                      data-search-corpus-url="{% url 'MusicAnalyzer:distant_choice' %}"
+                        {% elif type == "individual" %}
+                      action="{% url 'MusicAnalyzer:individual_choice' %}"
+                      data-search-corpus-url="{% url 'MusicAnalyzer:individual_choice' %}"
+                        {% endif %}
+                >
+                    {% csrf_token %}
+                    <input type="hidden" name="state" value="search_corpus"/>
+                    {{ search_form.as_p }}
+                </form>
+                <button id="search_corpus_button" class="uk-button uk-button-default"
+                        onclick="search_corpus(event)"><i class="fas fa-search"></i>&nbsp;Search
+                </button>
 
-                {% endif %}
+            {% endif %}
         </div>
+    </div>
+    <div id="searchResults" class="invisible uk-grid uk-child-width-1-1">
+        <hr class="uk-divider-icon">
+        <div class="uk-container .uk-align-center">
+
+            <form id="select_to_analyse_form" method="post"
+                    {% if type == "distant" %}
+                  action="{% url 'MusicAnalyzer:distant_choice' %}"
+                  data-search-corpus-url="{% url 'MusicAnalyzer:distant_choice' %}"
+                    {% elif type == "individual" %}
+                  action="{% url 'MusicAnalyzer:individual_choice' %}"
+                  data-search-corpus-url="{% url 'MusicAnalyzer:individual_choice' %}"
+                    {% endif %}
+            >
+                {% csrf_token %}
+                <input type="hidden" name="state" value="select_for_analysis"/>
+                <div class="uk-flex uk-flex-center">
+                    <button class="uk-button uk-button-default" style="margin:2em;" type="submit"><i
+                            class="fas fa-chart-line"></i>&nbsp;&nbsp;Analyze
+
+                    </button>
                 </div>
-
-                <div id="searchResults" class="invisible uk-grid uk-child-width-1-1">
-                <div class="uk-container .uk-align-center">
-                    <h3 class="uk-text-center">Results</h3>
-
-                    <form id="select_to_analyse_form" method="post"
+                <table id="t_searchResults" class="uk-table uk-table-middle uk-table-divider">
+                    <thead>
+                    <tr>
+                        <th>
                             {% if type == "distant" %}
-                          action="{% url 'MusicAnalyzer:distant_choice' %}"
-                          data-search-corpus-url="{% url 'MusicAnalyzer:distant_choice' %}"
+                                <input type="checkbox" name="music_piece" id="select_all_music_pieces"
+                                       value="select all" class="invisible" onclick="toggleSelectAll(this)">
                             {% elif type == "individual" %}
-                          action="{% url 'MusicAnalyzer:individual_choice' %}"
-                          data-search-corpus-url="{% url 'MusicAnalyzer:individual_choice' %}"
+                                <a type="button" id="deselect_all_music_pieces"
+                                   name="music_piece" onclick="toggleSelectAll(this)">deselect
+                                </a>
                             {% endif %}
-                    >
-                        {% csrf_token %}
-                        <input type="hidden" name="state" value="select_for_analysis"/>
-                        <input class="uk-button uk-button-default" type="submit" value="Analyze!">
-                        <table id="t_searchResults" class="uk-table">
-                            <thead>
-                            <tr>
-                                <th>
-                                    {% if type == "distant" %}
-                                        <input type="checkbox" name="music_piece" id="select_all_music_pieces"
-                                               value="select all" class="invisible" onclick="toggleSelectAll(this)">
-                                    {% elif type == "individual" %}
-                                        <button type="button" id="deselect_all_music_pieces"
-                                                class="uk-button uk-button-small uk-button-default uk-disabled"
-                                                name="music_piece" onclick="toggleSelectAll(this)">deselect
-                                        </button>
-                                    {% endif %}
-                                </th>
-                                <th>composer</th>
-                                <th>title</th>
-                            </tr>
-                            </thead>
-                            <tbody>
-                            </tbody>
-                        </table>
-                        <input class="uk-button uk-button-default" type="submit" value="Analyze!">
-                    </form>
-                </div>
+                        </th>
+                        <th>composer</th>
+                        <th>title</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    </tbody>
+                </table>
+                <div class="uk-flex uk-flex-center">
+                    <button class="uk-button uk-button-default" style="margin:2em;" type="submit"><i
+                            class="fas fa-chart-line"></i>&nbsp;&nbsp;Analyze
 
+                    </button>
                 </div>
+            </form>
+        </div>
+
+    </div>
 
 {% endblock %}
