--- a/templates/MusicAnalyzer/Choice.html
+++ b/templates/MusicAnalyzer/Choice.html
@@ -19,7 +19,9 @@
     {{ message }}
     <div class="uk-grid uk-child-width-1-2">
         <div class="uk-container">
-            <h3 class="uk-text-center">Select your own file <span class="uk-icon-button" uk-icon="question" onclick="showPossibleFileExtensions();"></span></h3>
+            <h3 class="uk-text-center">Select your own file <span class="uk-icon-button" uk-icon="question"  uk-tooltip="title: Valid file formats are: <br> ABC (.abc), Capella (.cap), ClercqTemperley, Humdrum (.krn), MEI (.mei), Midi (.midi), MuseData (.md), MusicXML (.musicxml/.mxl), Noteworthy (.nwc), NoteworthyBinary, RomanText (.rtf), Scala (.scl), TinyNotation and Volpiano.;" onclick="showPossibleFileExtensions();">
+
+            </span></h3>
 
                 <div class="js-upload uk-placeholder uk-text-center upload_files_new">
                     <span uk-icon="icon: cloud-upload"></span>
