exchange notification for tooltip

--- a/templates/MusicAnalyzer/Choice.html
+++ b/templates/MusicAnalyzer/Choice.html
@@ -10,7 +10,6 @@
     {# add static files here #}
     <link rel="stylesheet" type="text/css" href="{% static "/css/choice.css" %}"/>
     <script src="{% static 'js/handle_file_choice.js' %}"></script>
-    <script src="{% static 'js/explanations.js' %}"></script>
 
 {% endblock %}
 
@@ -19,7 +18,7 @@
     {{ message }}
     <div class="uk-grid uk-child-width-1-2">
         <div class="uk-container">
-            <h3 class="uk-text-center">Select your own file <span class="uk-icon-button" uk-icon="question"  uk-tooltip="title: Valid file formats are: <br> ABC (.abc), Capella (.cap), ClercqTemperley, Humdrum (.krn), MEI (.mei), Midi (.midi), MuseData (.md), MusicXML (.musicxml/.mxl), Noteworthy (.nwc), NoteworthyBinary, RomanText (.rtf), Scala (.scl), TinyNotation and Volpiano.;" onclick="showPossibleFileExtensions();">
+            <h3 class="uk-text-center">Select your own file <span class="uk-icon-button" uk-icon="question"  uk-tooltip="title: Valid file formats are: <br> ABC (.abc), Capella (.cap), ClercqTemperley, Humdrum (.krn), MEI (.mei), Midi (.midi), MuseData (.md), MusicXML (.musicxml/.mxl), Noteworthy (.nwc), NoteworthyBinary, RomanText (.rtf), Scala (.scl), TinyNotation and Volpiano.;">
 
             </span></h3>
 
