differentiate between uploaded and corpus files in processing

--- a/templates/MusicAnalyzer/Choice.html
+++ b/templates/MusicAnalyzer/Choice.html
@@ -93,7 +93,7 @@
                     <tr>
                         <th>
                             {% if type == "distant" %}
-                                <input type="checkbox" name="music_piece" id="select_all_music_pieces"
+                                <input type="checkbox" class="uk-checkbox" name="music_piece" id="select_all_music_pieces"
                                        value="select all" class="invisible" onclick="toggleSelectAll(this)">
                             {% elif type == "individual" %}
                                 <a type="button" id="deselect_all_music_pieces"
