--- a/templates/MusicAnalyzer/Base.html
+++ b/templates/MusicAnalyzer/Base.html
@@ -20,15 +20,16 @@
 <body>
 <header>
     <div class="uk-position-top">
+        <div uk-sticky="sel-target: .uk-navbar-container; cls-active: uk-navbar-sticky">
         <nav class="uk-navbar-container uk-navbar-default" uk-navbar>
             <div class="uk-navbar-left">
                 <ul class="uk-navbar-nav">
 
-                    <a href="{% url 'MusicAnalyzer:index' %}"><img src="{% static "/images/logo.png" %}" alt="logo" style="height:20%;"></a>
-
+                    <li style="width:20%;"><a href="{% url 'MusicAnalyzer:index' %}"><img style="padding-bottom: 2em;" src="{% static "/images/logo.png" %}" alt="logo"></a></li>
                 </ul>
             </div>
         </nav>
+        </div>
     </div>
 </header>
 <div class="body">
