--- a/templates/MusicAnalyzer/Base.html
+++ b/templates/MusicAnalyzer/Base.html
@@ -28,6 +28,7 @@
                     <li style="width:20%;"><a href="{% url 'MusicAnalyzer:index' %}"><img style="padding-bottom: 2em;" src="{% static "/images/logo.png" %}" alt="logo"></a></li>
                 </ul>
             </div>
+            {% block zoom_nav_block %}{% endblock %}
         </nav>
         </div>
     </div>
