--- a/templates/MusicAnalyzer/IndividualAnalysis.html
+++ b/templates/MusicAnalyzer/IndividualAnalysis.html
@@ -11,22 +11,8 @@
           integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     {# add static files here #}
 {% endblock %}
-
-{% block body_block %}
-    <header>
-        <div class="uk-position-top">
-            <div uk-sticky="sel-target: .uk-navbar-container; cls-active: uk-navbar-sticky">
-                <nav class="uk-navbar-container uk-navbar-default" uk-navbar>
-                    <div class="uk-navbar-left">
-                        <ul class="uk-navbar-nav">
-
-                            <li style="width:20%;"><a href="{% url 'MusicAnalyzer:index' %}"><img
-                                    style="padding-bottom: 2em;" src="{% static "/images/logo.png" %}" alt="logo"></a>
-                            </li>
-                        </ul>
-
-                    </div>
-                    <div class="uk-navbar-right">
+{% block zoom_nav_block %}
+ <div class="uk-navbar-right">
                         <ul class="uk-navbar-nav" style="color:black;">
                             <li style="margin-right:2em;">
                                 <div>
@@ -44,10 +30,9 @@
                             </li>
                         </ul>
                     </div>
-                </nav>
-            </div>
-        </div>
-    </header>
+{% endblock %}
+
+{% block body_block %}
     <div class="column">
     </div>
     <div class="space-m uk-align-center uk-width-1-1 uk-width-3-4@m"
