--- a/templates/MusicAnalyzer/IndividualAnalysis.html
+++ b/templates/MusicAnalyzer/IndividualAnalysis.html
@@ -14,6 +14,37 @@
 
 {% block body_block %}
     <div class="space-m uk-align-center uk-width-1-1 uk-width-1-2@m"
+         style="margin-top: 6em;">
+        <div class="uk-padding">
+{#            <h3>Test Überschrift</h3>#}
+            <form class="uk-form-stacked">
+                <div class="uk-margin">
+                    <div class="uk-form-label">Choose metrics to analyse:</div>
+                    <div class="uk-form-controls">
+                        <label><input class="uk-checkbox" type="checkbox"> chords</label>
+                        <br>
+                        <label><input class="uk-checkbox" type="checkbox"> intervals</label>
+                        <br>
+                        <label><input class="uk-checkbox" type="checkbox"> leading notes</label>
+                        <br>
+                        <label><input class="uk-checkbox" type="checkbox"> key</label>
+                    </div>
+                </div>
+            </form>
+            {#            <form class="uk-form-stacked">#}
+            {#                <div class="uk-margin"> #}
+            {#                    <div class="uk-form-label">Radio</div>#}
+            {#                    <div class="uk-form-controls">#}
+            {#                        <label><input class="uk-checkbox" type="checkbox">A</label>#}
+            {#                        <br>#}
+            {#                        <label><input class="uk-checkbox" type="checkbox">B</label>#}
+            {#                    </div>#}
+            {#                </div>#}
+            {#            </form>#}
+        </div>
+    </div>
+
+    <div class="space-m uk-align-center uk-width-1-1 uk-width-1-2@m"
          style="background: #f2f7fc; border: 1px solid #ddd; margin-top: 6em;">
         <div class="uk-padding" id="osmdCanvas"></div>
     </div>
