redisplay previously uploaded files

--- a/templates/MusicAnalyzer/Choice.html
+++ b/templates/MusicAnalyzer/Choice.html
@@ -106,6 +106,7 @@
                     </tr>
                     </thead>
                     <tbody>
+                    {{data|json_script:"already_uploaded" }}
                     </tbody>
                 </table>
                 <div class="uk-flex uk-flex-center">
